# mork-stack

./: .gitignore  AGENTS.md  AGENT_HARDENING_PLAN.md  README.md  architecture.md  docker-compose.yml  setup.sh  start.sh  update.sh
.github/: FUNDING.yml
mork-app/: Dockerfile  README.md  env.example  package-lock.json  package.json  prisma.config.ts
mork-app/prisma/: schema.prisma
mork-app/scripts/: ensure-ollama.mjs
mork-app/src/app/: globals.css  layout.tsx  page.tsx
mork-app/src/components/: AgentStatusCard.tsx  AppControlPanel.tsx  ArbLogFeed.tsx  ChatPanel.tsx  JupiterPanel.tsx  PreflightStatusCard.tsx  SherpaPanel.tsx  StatusPanel.tsx  TopBarUpdateButton.tsx  WalletPanel.tsx
scripts/: setup.sh
services/arb/: build_whitelist.js  config.js  index.js  morkReporter.js  morkWalletSense.js  package-lock.json  package.json
services/mork-core/: package-lock.json  package.json  tsconfig.json
services/mork-core/src/: memory.ts  ollama.ts  server.ts  wallet.ts
services/mork-core/system/: mork_directive.txt
services/sherpa/: README.md  requirements.txt  run.sh  sherpa_bot.py
services/sol-mev-bot/: Cargo.toml  arbScanner.ts  bundle.rs  deploy.sh  index.ts  logger.ts  main.rs  package-lock.json  package.json  poolImbalance.ts  poolStateReader.ts  tsconfig.json  tx_builder.rs  types.ts
services/sol-mev-bot/strategies/: arbScanner.ts  momentumRunner.ts  poolImbalance.ts
services/sol-mev-bot/utils/: circuitBreaker.ts  feeSimulator.ts  heliusListener.ts  jitoClient.ts  logger.ts  rustEngineClient.ts  statsTracker.ts
services/telegram-bridge/: bridge.py
(+38 files in other folders)
